crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/positive auto negative - miss on explicit glob file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run positive-auto-negative
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content package.json inputs-cache-test modified-pkg

> vt run positive-auto-negative
$ print-file src/main.ts 〇 cache miss: 'package.json' modified, executing
export const main = 'initial';
