crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/positive globs - hit on read but unmatched file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run positive-globs-reads-unmatched
$ vtt print-file src/main.ts src/utils.ts
export const main = 'initial';
export const utils = 'initial';
> vtt replace-file-content src/utils.ts initial modified

> vt run positive-globs-reads-unmatched
$ vtt print-file src/main.ts src/utils.ts ◉ cache hit, replaying
export const main = 'initial';
export const utils = 'initial';

---
vt run: cache hit, <duration> saved.
