crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/positive globs only - hit on unmatched file change.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run positive-globs-only
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt replace-file-content test/main.test.ts outside modified

> vt run positive-globs-only
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit, <duration> saved.
