crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/positive negative globs - hit on excluded file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run positive-negative-globs
$ vtt print-file src/main.ts
export const main = 'initial';
> vtt replace-file-content src/main.test.ts main modified

> vt run positive-negative-globs
$ vtt print-file src/main.ts ◉ cache hit, replaying
export const main = 'initial';

---
vt run: cache hit, <duration> saved.
