crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-cache-test/snapshots/positive negative globs - miss on non-excluded file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run positive-negative-globs
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content src/main.ts initial modified

> vt run positive-negative-globs
$ print-file src/main.ts ✗ cache miss: 'src/main.ts' modified, executing
export const main = 'modified';
